[project]
name = "promptgen"
version = "0.1.0"
description = "SDXL prompt generator from LoRA training tag datasets"
requires-python = ">=3.11"
dependencies = [
    "pydrive2>=1.19.0",
]

[project.scripts]
promptgen = "promptgen.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptgen*"]
